# wolkd

./: .gitignore  CMakeLists.txt
assets/: config.json  forest.map
cmake/: functions.cmake
libs/: CMakeLists.txt
libs/bfs/: CMakeLists.txt  pathfinder.cpp  pathfinder.h
wolkd/: CMakeLists.txt  Event.h  ICollision.h  IEventer.h  IGame.h  IInit.h  IObject.h  IWorld.h  Stats.h  Tiles.h  Types.h  helpers.hpp  main.cpp
wolkd/cpp/: jsinit.cpp  main.cpp  player_object.cpp  stats.cpp  zgame.cpp  zmap_object.cpp  zombie_object.cpp
wolkd/hpp/: icollision.h  ieventer.h  igame.h  iinit.h  imap.h  init_types.h  iobject.h  jsinit.h  player_object.h  zgame.h  zmap_object.h  zombie_object.h  zproto.h  ztile.h  ztypes.h
wolkd/impl/: CollisionImpl.h  JsInit.cpp  JsInit.h  Player.cpp  Player.h  WolkingZombies.cpp  WolkingZombies.h  WorldImpl.cpp  WorldImpl.h  Zombie.cpp  Zombie.h
